[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Scenes_BackGrounds/Kitchen.jpeg" type="Texture" id=1]
[ext_resource path="res://Scenes/Characters/Main_Character_Animation.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Portal.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Lives.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Low_Level/Kitchen_Scene.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.12636, 221.866 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 88.3499, 3.73846 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26.2011, 5.14497 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 188.763, 5.46138 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 519.156, 7.94287 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3.51978, 285.957 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 54.9366, 1.1344 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 53.7492, 5.42453 )

[node name="Kitchen_Scene" type="Node2D"]
script = ExtResource( 5 )

[node name="Kitchen" type="Sprite" parent="."]
position = Vector2( 515.767, 301.497 )
texture = ExtResource( 1 )

[node name="Room_Objects" type="StaticBody2D" parent="."]
position = Vector2( 514.66, 300.91 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Room_Objects"]
position = Vector2( -514.66, -300.91 )
polygon = PoolVector2Array( 459.278, 432.65, 449.6, 432.65, 449.6, 450.671, 438.588, 451.005, 438.254, 471.027, 418.565, 470.693, 418.565, 490.716, 389.866, 491.05, 368.842, 491.05, 370.177, 471.695, 380.522, 472.028, 380.522, 440.993, 269.397, 440.993, 269.344, 441.313, 257.839, 442.155, 258.175, 441.554, 178.741, 442.277, 179.186, 451.632, 169.164, 451.854, 169.609, 470.786, 159.364, 470.786, 159.587, 480.586, 148.673, 480.809, 149.119, 501.076, 108.805, 502.19, 108.583, 531.144, 98.1146, 531.367, 99.6737, 551.858, 388.59, 550.277, 389.714, 589.982, 389.34, 600.845, 459.742, 600.184 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room_Objects"]
position = Vector2( -339.02, -16.0428 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Room_Objects"]
position = Vector2( -309.923, -87.353 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Room_Objects"]
position = Vector2( -225.296, -105.401 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Room_Objects"]
position = Vector2( -62.9205, -115.869 )
shape = SubResource( 4 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Room_Objects"]
position = Vector2( -514.66, -300.91 )
polygon = PoolVector2Array( 640.5, 179.5, 769, 179.5, 768.5, 198.5, 840.5, 198, 839.5, 151.5, 637.5, 151.5 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Room_Objects"]
position = Vector2( -514.66, -300.91 )
polygon = PoolVector2Array( 918.96, 247.44, 840.843, 196.519, 839.253, 150.963 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Room_Objects"]
position = Vector2( -3.93988, 305.22 )
shape = SubResource( 5 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Room_Objects"]
position = Vector2( -514.66, -300.91 )
polygon = PoolVector2Array( 1024.29, 344.287, 978.901, 301.572, 980.903, 272.206, 950.202, 233.495, 918.165, 246.844, 936.186, 196.787, 1016.28, 274.208 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Room_Objects"]
position = Vector2( 514.774, 19.799 )
shape = SubResource( 6 )

[node name="Main_Character_Animation" parent="." instance=ExtResource( 2 )]
position = Vector2( 648.04, 364.635 )

[node name="Portal" parent="." instance=ExtResource( 3 )]
position = Vector2( 122.805, -72.0813 )
next_scene_path = "res://Scenes/Low_Level/Entry_Scene.tscn"
player_spawn_location = Vector2( 54, 368 )

[node name="Portal2" parent="." instance=ExtResource( 3 )]
position = Vector2( -153.507, -250.95 )
next_scene_path = "res://Scenes/Low_Level/Basement_Scene.tscn"
player_spawn_location = Vector2( 492, 420 )

[node name="Lives" parent="." instance=ExtResource( 4 )]

[node name="Dialog" type="Label" parent="."]
margin_left = 510.225
margin_top = 486.754
margin_right = 759.225
margin_bottom = 585.754
text = "I have no time for have a snak."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Table" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table"]
position = Vector2( 327.568, 439.066 )
shape = SubResource( 7 )

[node name="Show_Dialogs" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Stove" type="Area2D" parent="."]
position = Vector2( -153.043, 30.2722 )
scale = Vector2( 1.022, 0.99172 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stove"]
position = Vector2( 393.052, 208.542 )
shape = SubResource( 8 )

[connection signal="body_entered" from="Table" to="." method="_on_Table_body_entered"]
[connection signal="timeout" from="Show_Dialogs" to="." method="_on_Show_Dialogs_timeout"]
[connection signal="body_entered" from="Stove" to="." method="_on_Stove_body_entered"]
